added title to label/input

--- a/4. Prevent Default.html
+++ b/4. Prevent Default.html
@@ -12,8 +12,8 @@
         <h2>preventDefault()</h2>
         <p> Please enter your name and click Submit to view the concept the preventDefault() method.</p>
         <form action="/examples/html/action.js" method="post" id="users">
-            <label>First Name:</label>
-            <input type="text" name="first-name" id="firstName">
+            <label title="firstName">First Name:</label>
+            <input title="firstName" type="text" name="first-name" id="firstName">
             <input type="submit" value="Submit" id="submitBtn">
         </form>
         <div id="explanation">
